--- a/src/templates/clientes.html
+++ b/src/templates/clientes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add New Client</title>
+    <title>Client List</title>
 </head>
 
 <body>
@@ -52,6 +52,7 @@
                 <th>Teléfono</th>
                 <th>Email</th>
                 <th>Categoría Fiscal</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -65,6 +66,12 @@
                 <td>{{ client.telefono }}</td>
                 <td>{{ client.mail }}</td>
                 <td>{{ client.categoria_fiscal }}</td>
+                <td>
+                    <!-- Button to view client details by MongoDB _id -->
+                    <form action="{{ url_for('clientes.get_one', client_id=client._id) }}" method="get">
+                        <button type="submit">View</button>
+                    </form>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
